# predictit_api_project

./: README.md  main.py  scraper_functions.py
predictit-poetry/: pyproject.toml
